# Portatal

./: .gitignore  Pipfile  README.md  TimedResource.py  access_token.py  electricity.py  electricity_server.py  electricity_tongxinyun.py  electricity_viewstate.py  normalize.py  parse_room.py  pyproject.toml  wechat_server.py  wechat_xml.py  ws_client.py  ws_server.py
data/: buildings.json  buildings_tongxinyun.json  wechat_server.py
static/: electricity.html  electricity.js
